jsonhelper/jsonhelper.css
.editor-description {
    text-align: center;
    font-size: 24px;
    margin-top: 25px;
}

.editor-container {
    margin-top: 10px;
    background: transparent;
    display: flex;
    text-align: center;
}

#input-area {
    resize: none;
    font-size: 18px;
    border: solid 1px gray;
    width: 100%;
    height: 100%;
    margin-top: unset;
}

#output {
    resize: none;
    font-size: 18px;
    min-height: 600px;
    width: 39.5%;
    display: block;
    border: solid 1px gray;
    text-align: left;
    color: rgb(236, 236, 240);
    background-color: rgb(55, 55, 57);
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

#input-div {
    resize: none;
    font-size: 18px;
    min-height: 600px;
    width: 39.5%;
    display: block;
    margin-left: 10%;
    margin-right: 3px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.output-pre {
    margin-left: 15px;
    text-wrap: wrap;
}

.usage-container {
    margin-top: 55px;
    margin-left: 5%;
}

.usage-line>pre {
    text-wrap: wrap;
}

.span-hl {
    background-color: rgb(45, 45, 45);
    border: solid 1px white;
    padding: 1px;
}

.copy-button {
    margin-top: 2px;
    position: relative;
    left: 50%;
}

.invis-area {
    position: fixed;
    top: 50%;
    left: 50%;
    width: 2em;
    height: 2em;
    padding: 0;
    border: none;
    outline: none;
    background: transparent;
}

@media only screen and (max-width: 1550px) {
    #output {
        min-height: 400px;
    }
}

@media only screen and (max-width: 768px) {
    #output {
        min-height: 300px;
    }
}

